[package]
name = "my-info"
version = "0.7.0"
edition = "2021"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
license = "MIT"
description = "In this project you will see some information about yourself through the GitHub user"
readme = "README.md"
repository = "https://github.com/joaolfp/MyInfo"
exclude = [".github/**"]

[dependencies]
colored = "2.2.0"
comfy-table = "7.1.1"
futures = "0.3.31"
indicatif = "0.17.9"
reqwest = { version = "0.12.10", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
demand = "1.6.0"