[package]
name = "my-info"
version = "0.8.0"
edition = "2021"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
license = "MIT"
description = "In this project you will see some information about yourself through the GitHub user"
readme = "README.md"
repository = "https://github.com/joaolfp/MyInfo"
exclude = [".github/**"]

[dependencies]
colored = "3.0.0"
comfy-table = "7.2.1"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
demand = "1.7.0"