[package]
name = "my-info"
version = "0.8.0"
edition = "2024"
authors = ["João Lucas <joaolucasfp2001@gmail.com>"]
license = "MIT"
description = "In this project you will see some information about yourself through the GitHub user"
readme = "README.md"
repository = "https://github.com/joaolfp/MyInfo"
exclude = [".github/**"]

[dependencies]
colored = "3.1.1"
comfy-table = "7.2.2"
futures = "0.3.32"
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.52.2", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
demand = "2.0.1"
